[tool.poetry]
name = "hypermodern-ben"
version = "0.1.0"
description = ""
authors = ["benjmcarr <benjmcarr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {version = "^5.1", extras = ["toml"]}
pytest-cov = "^2.9.0"
nox = "^2020.5.24"

[tool.poetry.scripts]
hypermodern-ben = "hypermodern_ben.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_ben"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
description = "Best practices example project a la hypermodern-python"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/benjmcarr/hypermodern-ben"
repository = "https://github.com/benjmcarr/hypermodern-ben"
keywords = ["hypermodern"]

